--- a/views/register.ejs
+++ b/views/register.ejs
@@ -17,7 +17,7 @@
       </div>
     </div>
     <form action="" method="get" class="entire-form">
-      <h2 class = login-title>Sign in to Example Cafe</h2>
+      <h2 class = login-title>Sign up for Example Cafe</h2>
       <div class="login-form">
         <label for="email">Enter your email: </label>
         <input type="email" name="email" id="email" required>
@@ -27,9 +27,9 @@
         <input type="email" name="email" id="email" required>
       </div>
       <div class="login-form">
-        <input type="submit" class = "input-button" value="Login">
+        <input type="submit" class = "input-button" value="Sign Up">
       </div>
-      <p class = "account-signup">Don't have an account? Sign up <a href = '/register'> here </a></p>
+      <p class = "account-signup">Already have an account? Login here <a href = '/login'> here </a></p>
     </form>
   </body>
 </html>
