solved issue that caused images not to show

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 
   <body>
     <div class  = "authentication-sidebar">
-      <a href = "#"> <img class = 'logo' src = "public/images/example_cafe.png"></a>
+      <a href = "#"> <img class = 'logo' src = "/images/example_cafe.png"></a>
       <div class = "break-time">
         <p class = "break-time-title">Life without coffee is like something without something … sorry, I haven’t had any coffee yet.</p>
         <img class = "people-icon" src = "https://images.all-free-download.com/images/graphicthumb/break_time_drawing_people_drink_coffee_icon_6835776.jpg">
@@ -29,7 +29,7 @@
       <div class="login-form">
         <input type="submit" class = "input-button" value="Login">
       </div>
-      <p class = "account-signup">Don't have an account? Sign up <a href = #> here </a></p>
+      <p class = "account-signup">Don't have an account? Sign up <a href = '/register'> here </a></p>
     </form>
   </body>
 </html>
