made styling changes to the register page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,8 +23,8 @@
         <input type="email" name="email" id="email" required>
       </div>
       <div class="login-form">
-        <label for="email">Enter your password: </label>
-        <input type="email" name="email" id="email" required>
+        <label for="password">Enter your password: </label>
+        <input type="password" name="password" id="password required>
       </div>
       <div class="login-form">
         <input type="submit" class = "input-button" value="Login">
