adjusted the style of the login form

--- a/styles/login.scss
+++ b/styles/login.scss
@@ -65,6 +65,7 @@ body {
   top: -300px;
   left: 450px;
 
+
   .login-title {
     @include flexLogin;
     color: #0a192f;
@@ -80,20 +81,20 @@ body {
     color: #0a192f;
     font-size: 16px;
     width:50%;
-    height: 75px;
+    height: 100px;
     position: relative;
     left: 650px;
     top: -500px;
+
 
 
     input{
       width: 75%;
       height: 30px;
       border: none;
-      margin-bottom: 5px;
       margin-top: 10px;
       border-radius: 5%;
-      background-color: rgb(226, 226, 226);
+      background-color: rgb(226, 226, 226)
 
     }
     .input-button {
