added a link to the home page when user clicks on logo

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 
   <body>
     <div class  = "authentication-sidebar">
-      <a href = "#"> <img class = 'logo' src = "/images/example_cafe.png"></a>
+      <a href = "/index"> <img class = 'logo' src = "/images/example_cafe.png"></a>
       <div class = "break-time">
         <p class = "break-time-title">Life without coffee is like something without something … sorry, I haven’t had any coffee yet.</p>
         <img class = "people-icon" src = "https://images.all-free-download.com/images/graphicthumb/break_time_drawing_people_drink_coffee_icon_6835776.jpg">
