--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,7 +6,7 @@
 
   <body>
     <div class  = "register-sidebar">
-      <a href = "#"> <img class = 'logo' src = "/images/example_cafe.png"></a>
+      <a href = "/index"> <img class = 'logo' src = "/images/example_cafe.png"></a>
       <div class = "side-bar">
         <p class = "side-bar-title">What goes best with a cup of coffee? Another cup.</p>
         <img class = "side-bar-icon" src = "/images/Serving-Coffee.jpeg">
@@ -29,7 +29,7 @@
       <div class="login-form">
         <input type="submit" class = "input-button" value="Create Account">
       </div>
-      <p class = "account-signup">Already have an account? Sign in <a href = /login> here </a></p>
+      <p class = "account-login">Already have an account? Sign in <a href = /login> here </a></p>
     </form>
   </body>
 </html>
