Add tables for database

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Login Page</title>
+    <title>Sign up</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
       <div class="login-form">
         <input type="submit" class = "input-button" value="Sign Up">
       </div>
-      <p class = "account-signup">Already have an account? Login here <a href = '/login'> here </a></p>
+      <p class = "account-signup">Already have an account? Login <a href = '/login'> here </a></p>
     </form>
   </body>
 </html>
