--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,41 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sign up</title>
+    <title>Sign Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/register.css" type="text/css" />
+    <link rel="stylesheet" href="styles/register.css">
   </head>
-
   <body>
-    <div class  = "register-sidebar">
-      <a href = "/index"> <img class = 'logo' src = "/images/example_cafe.png"></a>
-      <div class = "side-bar">
-        <p class = "side-bar-title">What goes best with a cup of coffee? Another cup.</p>
-        <img class = "side-bar-icon" src = "/images/Serving-Coffee.jpeg">
+  <!-- nav -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light border border-bottom-secondary">
+    <div class="container-fluid">
+      <a href="#"> <img src = "images/example_cafe.png" class="img-nav navbar-brand circle  d-none d-md-inline"><img> </a>
+      <a class="navbar-brand d-inline float-left d-md-none text-start text-light" href="#">Example Cafe</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/index">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/orders">Orders</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/menu">Menu</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-light" type="submit">Search</button>
+        </form>
       </div>
     </div>
-    <form action="" method="get" class="entire-form">
-      <h2 class = login-title>Sign up to Example Cafe</h2>
-      <div class="login-form">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" required>
+  </nav>
+
+    <div class = "row">
+
+  <!-- Side bar Area -->
+  <div class="sidebar_column col-md-5 text-start py-5 rounded">
+  <section id = "sidebar">
+    <div class="container fluid text-start">
+      <h6 class = " display-6 ">Life without coffee is like something without something … sorry, I haven’t had any coffee yet.</h6>
+    </div>
+    <div class = "text-center my-5 d-none d-md-block">
+      <img src="https://images.all-free-download.com/images/graphicthumb/break_time_drawing_people_drink_coffee_icon_6835776.jpg" alt="" class = "img-fluid">
       </div>
-      <div class="login-form">
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" required>
+    </section>
+</div>
+
+  <!-- Register  -->
+  <div class="col-md-7">
+  <div class=" login_container container-md ms-5 mt-5">
+    <section id = "login_form">
+    <form class = "login-inputs">
+      <h4 class = "display-6 mb-4">Sign up to Example Cafe</h4>
+      <div class="user-input row mb-3 col-md-5">
+        <label for="name" class="col-sm-2 col-form-label me-1">Name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="name">
+        </div>
       </div>
-      <div class="login-form">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
+      <div class="user-input row mb-3 col-md-5">
+        <label for="email" class="col-sm-2 col-form-label me-1">Email</label>
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="email">
+        </div>
       </div>
-      <div class="login-form">
-        <input type="submit" class = "input-button" value="Create Account">
+      <div class="user-input row mb-3 col-md-5 ">
+        <label for="password" class="col-sm-2 col-form-label me-1">Password</label>
+        <div class="col-sm-10 mb-3">
+          <input type="password" class="form-control" id="password">
+        </div>
       </div>
-      <p class = "account-login">Already have an account? Sign in <a href = /login> here </a></p>
+      <button class = "btn btn-danger text-center px-5 mb-4">Sign up</button>
+      <p>Already have an account? Sign in <a href = "/login">here</a></p>
     </form>
+  </section>
+  </div>
+</div>
+</div>
+</div>
+
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-dark text-light">
+<!-- Section: Social media -->
+<section
+  class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+>
+  <!-- Left -->
+  <div class="me-5 d-none d-lg-block">
+    <span>Get connected with us on social networks:</span>
+  </div>
+
+  <!-- Right -->
+  <div class = "social-media-logos">
+    <a href="http://www.facebook.com" class="me-4 text-reset">
+      <i class="bi bi-facebook"></i>
+    </a>
+    <a href="http://www.twitter.com" class="me-4 text-reset">
+      <i class="bi bi-twitter"></i>
+    </a>
+    <a href="http://www.instagram.com" class="me-4 text-reset">
+      <i class="bi bi-instagram"></i>
+    </a>
+  </div>
+  <!-- Right -->
+</section>
+<!-- Section: Social media -->
+
+<!-- Section: Links  -->
+<section class="">
+  <div class="container text-center text-md-start mt-5">
+    <!-- Grid row -->
+    <div class="row mt-3">
+      <!-- Grid column -->
+      <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+        <!-- Content -->
+        <h6 class="text-uppercase fw-bold mb-4">
+          <i class="fas fa-gem"></i>Example Cafe
+        </h6>
+        <p>
+          Here you can use rows and columns to organize your footer content. Lorem ipsum
+          dolor sit amet, consectetur adipisicing elit.
+        </p>
+      </div>
+
+      <!-- Grid column -->
+      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+        <!-- Links -->
+        <h6 class="text-uppercase fw-bold mb-4 ms-3">
+          Contact
+        </h6>
+        <p><i class="fas fa-home me-3"></i> Toronto, ON</p>
+        <p>
+          <i class="fas fa-envelope me-3"></i>
+          info@example.com
+        </p>
+        <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+        <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+      </div>
+      <!-- Grid column -->
+    </div>
+    <!-- Grid row -->
+  </div>
+</section>
+<!-- Section: Links  -->
+
+
+</footer>
+<!-- Footer -->
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   </body>
 </html>
-
 
