resized sidebar images to fit larger screens

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -43,12 +43,12 @@
   <!-- Side bar Area -->
   <div class="sidebar_column col-md-5 text-start py-5 rounded">
   <section id = "sidebar">
-    <div class="container fluid text-start">
-      <h6 class = " display-6 ">Life without coffee is like something without something … sorry, I haven’t had any coffee yet.</h6>
-    </div>
-    <div class = "text-center my-5 d-none d-md-block">
-      <img src="https://images.all-free-download.com/images/graphicthumb/break_time_drawing_people_drink_coffee_icon_6835776.jpg" alt="" class = "img-fluid">
+    <div class="container fluid text-center">
+      <h6 class = " display-6 ">What goes best with a cup of coffee? Another cup.</h6>
+    <div class = "text-center my-5 ms-5 ps-5 d-none d-md-block col-lg-8">
+      <img src="/images/Serving-Coffee.jpeg" alt="" class = "img-fluid ms-2">
       </div>
+    </div>
     </section>
 </div>
 
