Adjusted styling for login & register pages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,19 +41,19 @@
     <div class = "row">
 
   <!-- Side bar Area -->
-  <div class="sidebar_column col-md-5 text-start py-5 rounded">
+  <div class="sidebar_column col-md-5 text-start py-5 border border-dark">
   <section id = "sidebar">
-    <div class="container fluid text-start">
+    <div class="container fluid text-center">
       <h6 class = " display-6 ">Life without coffee is like something without something … sorry, I haven’t had any coffee yet.</h6>
-    </div>
-    <div class = "text-center my-5 d-none d-md-block">
-      <img src="https://images.all-free-download.com/images/graphicthumb/break_time_drawing_people_drink_coffee_icon_6835776.jpg" alt="" class = "img-fluid">
+      <div class = "text-center my-5 ms-5 ps-5 d-none d-md-block col-lg-8">
+      <img src="https://images.all-free-download.com/images/graphicthumb/break_time_drawing_people_drink_coffee_icon_6835776.jpg" alt="" class = "img-fluid ms-5">
       </div>
+    </div>
     </section>
 </div>
 
   <!-- Login  -->
-  <div class="col-md-7">
+  <div class="login col-md-7 border border-dark">
   <div class=" login_container container-md ms-5 mt-5">
     <section id = "login_form">
     <form class = "login-inputs">
@@ -80,7 +80,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-dark text-light">
+<footer class="text-center text-lg-start bg-dark text-light pb-5">
 <!-- Section: Social media -->
 <section
   class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
