--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
   <!-- nav -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light border border-bottom-secondary">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light border border-bottom-secondary pb-5">
     <div class="container-fluid">
       <a href="#"> <img src = "images/example_cafe.png" class="img-nav navbar-brand circle  d-none d-md-inline"><img> </a>
       <a class="navbar-brand d-inline float-left d-md-none text-start text-light" href="#">Example Cafe</a>
@@ -41,20 +41,20 @@
     <div class = "row">
 
   <!-- Side bar Area -->
-  <div class="sidebar_column col-md-5 text-start py-5 rounded">
+  <div class="sidebar_column col-md-5 text-start py-5 border border-dark" >
   <section id = "sidebar">
     <div class="container fluid text-center">
       <h6 class = " display-6 ">What goes best with a cup of coffee? Another cup.</h6>
     <div class = "text-center my-5 ms-5 ps-5 d-none d-md-block col-lg-8">
-      <img src="/images/Serving-Coffee.jpeg" alt="" class = "img-fluid ms-2">
+      <img src="/images/Serving-Coffee.jpeg" alt="" class = "img-fluid ms-5">
       </div>
     </div>
     </section>
 </div>
 
   <!-- Register  -->
-  <div class="col-md-7">
-  <div class=" login_container container-md ms-5 mt-5">
+  <div class="register col-md-7 border border-dark">
+  <div class=" register_container container-md ms-5 mt-5">
     <section id = "login_form">
     <form class = "login-inputs">
       <h4 class = "display-6 mb-4">Sign up to Example Cafe</h4>
@@ -86,7 +86,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-dark text-light">
+<footer class="text-center text-lg-start bg-dark text-light pb-5">
 <!-- Section: Social media -->
 <section
   class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
