--- a/styles/login.scss
+++ b/styles/login.scss
@@ -11,7 +11,7 @@ body {
 
   img {
     width: 100%;
-    height: 350px;
+    height: 400px;
   }
   h6 {
     font-size: 2em;
@@ -38,6 +38,9 @@ button {
 a:hover {
   background-color: yellow;
 }
+}
+.login{
+  background-color: rgb(245, 222, 179);
 }
 
 
