Register user into database. Adjust form fields and Database design

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
       </div>
       <div class="login-form">
         <label for="password">Enter your password: </label>
-        <input type="password" name="password" id="password required>
+        <input type="password" name="password" id="password required">
       </div>
       <div class="login-form">
         <input type="submit" class = "input-button" value="Login">
