--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,35 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/login.css">
+    <%- include('partials/_header') %>
   </head>
   <body>
-  <!-- nav -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light border border-bottom-secondary">
-    <div class="container-fluid">
-      <a href="#"> <img src = "images/example_cafe.png" class="img-nav navbar-brand circle  d-none d-md-inline"><img> </a>
-      <a class="navbar-brand d-inline float-left d-md-none text-start text-light" href="#">Example Cafe</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/index">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/orders">Orders</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/menu">Menu</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-light" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
 
     <div class = "row">
 
