--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="user-input row mb-3 col-md-5">
-        <label for="phone" class="col-sm-2 col-form-label me-1">Enter your phone number:</label>
+        <label for="phone" class="col-sm-2 col-form-label me-1">Phone</label>
         <div class="col-sm-10">
           <input type="tel" id="phone" name="phone" class="form-control" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"required>
         </div>
