--- a/views/register.ejs
+++ b/views/register.ejs
@@ -35,13 +35,13 @@
       <div class="user-input row mb-3 col-md-5">
         <label for="name" class="col-sm-2 col-form-label me-1">Name</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="name" name="name">
+          <input type="text" class="form-control" id="name" name="name"required>
         </div>
       </div>
       <div class="user-input row mb-3 col-md-5">
         <label for="email" class="col-sm-2 col-form-label me-1">Email</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="email" name="email">
+          <input type="email" class="form-control" id="email" name="email"required>
         </div>
       </div>
       <div class="user-input row mb-3 col-md-5">
@@ -54,7 +54,7 @@
       <div class="user-input row mb-3 col-md-5 ">
         <label for="password" class="col-sm-2 col-form-label me-1">Password</label>
         <div class="col-sm-10 mb-3">
-          <input type="password" class="form-control" id="password" name="password">
+          <input type="password" class="form-control" id="password" name="password"required>
         </div>
       </div>
       <button type="submit" class = "btn btn-danger text-center px-5 mb-4">Sign up</button>
