--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,18 +30,18 @@
   <div class="login col-md-7 border border-dark">
   <div class=" login_container container-md ms-5 mt-5">
     <section id = "login_form">
-    <form class = "login-inputs">
+    <form action="/login" method="POST" class = "login-inputs">
       <h4 class = "display-6 mb-4">Sign in to Example Cafe</h4>
       <div class="user-input row mb-3 col-md-5">
         <label for="inputEmail3" class="col-sm-2 col-form-label me-1">Email</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail3">
+          <input type="email" class="form-control" id="inputEmail3" name="email">
         </div>
       </div>
       <div class="user-input row mb-3 col-md-5 ">
         <label for="inputPassword3" class="col-sm-2 col-form-label me-1">Password</label>
         <div class="col-sm-10 mb-3">
-          <input type="password" class="form-control" id="inputPassword3">
+          <input type="password" class="form-control" id="inputPassword3" name="password">
         </div>
       </div>
       <button class = "btn btn-danger text-center px-5 mb-4">Login</button>
