--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <div class = "row">
+    <div class = "row" style="min-height:70vh">
 
   <!-- Side bar Area -->
   <div class="sidebar_column col-md-5 text-start py-5 border border-dark">
