--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-dark text-light pb-5">
+<footer class="text-center text-lg-start bg-dark text-light pb-5 mt-auto">
   <!-- Section: Social media -->
   <section
     class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
