--- a/styles/homepage.scss
+++ b/styles/homepage.scss
@@ -49,7 +49,7 @@ main {
 }
 .comment-nav {
 
-  background: linear-gradient( rgba(0, 0, 0, 0.301), rgba(0, 0, 0, 0.301) ), url('./images/daan-evers-tKN1WXrzQ3s-unsplash.jpg');
+  background: linear-gradient( rgba(0, 0, 0, 0.301), rgba(0, 0, 0, 0.301) ), url('https://images.unsplash.com/photo-1554118811-1e0d58224f24?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1030&q=80');
   background-size:     cover;                      /* <------ */
   background-repeat:   no-repeat;
 }
