Render order.js

--- a/styles/homepage.scss
+++ b/styles/homepage.scss
@@ -35,6 +35,12 @@ main {
   height:300px;
   object-fit: cover;
 }
+
+.img-nav {
+  border-radius: 50%;
+  width: 10%
+}
+
 .footer-info {
   display: flex;
   width: 100%;
