--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,7 +13,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/orders">Orders</a>
+            <a class="nav-link active" aria-current="page" href="/order">Order Now!</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/menu">Menu</a>
