--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,10 +18,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
     <!-- App CSS -->
-<<<<<<< HEAD
-    <link rel="stylesheet" href="../styles/homepage.scss">
-
-=======
     <link rel="stylesheet" href="styles/homepage.css">
     <link rel="stylesheet" href="../public/styles/homepage.css">
 
@@ -35,7 +32,7 @@ main {
   flex-direction: column;
   width: 100%;
   justify-content: center;
-  font-family: 'Playfair Display', serif;
+  font-family: montserrat, sans-serif;
 }
 .logo{
   font-family: 'Cinzel Decorative', cursive;
@@ -140,7 +137,6 @@ h3 {
 
     </style>
 
->>>>>>> c09f7702435d8e1bb5a4e3ec158c2de09d73ba0b
     <title>Cafe Name</title>
   </head>
   <body>
@@ -263,21 +259,12 @@ h3 {
                       <img class="img" src="https://images.unsplash.com/photo-1511920170033-f8396924c348?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="">
                   </div>
                 </div>
-<<<<<<< HEAD
 
               </div>
           </span>
 
           <footer class="footer-info">
 
-=======
-
-              </div>
-          </span>
-
-          <footer class="footer-info">
-
->>>>>>> c09f7702435d8e1bb5a4e3ec158c2de09d73ba0b
               <div class="res-location">
                   <h3>CAFE NAME</h3>
                   <h5>Location</h5>
