--- a/views/order.ejs
+++ b/views/order.ejs
@@ -7,8 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Playfair+Display&display=swap" rel="stylesheet">
 <title>Page Title</title>
 <link rel="stylesheet" href="styles/order.css">
+<link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
+  <%- include('partials/_header') %>
     <main>
         <div class="title">
             <h1>Menu</h1>
@@ -46,6 +48,7 @@
         </section>
 
     </main>
+    <%- include('partials/_footer') %>
 
     <script src="scripts/orderpage.js"></script>
 
