--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Playfair+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -59,9 +61,9 @@
 
           <span class="section2">
 
-            <h2 class="text">OUR BEST MENU</h2>
+            <h2 class="text"><b>OUR BEST MENU</b></h2>
             <p class="text description">Selected from a perfect ingredients, and made by an<br> experiened chef</p>
-            <a class="btn btn-primary" style="margin-left: 4em;" href="/order">Order Now!</a>
+            <a class="btn btn-primary" style="margin-left: 4em;" href="/order"><b>Order Now!</a>
 
               <div id="carouselExampleInterval2" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -121,7 +123,7 @@
           </span>
           <span class="section3">
 
-            <h2 class="text">EXCLUSIVE EXPERIENCE</h2>
+            <h2 class="text"><b>EXCLUSIVE EXPERIENCE</b></h2>
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dapibus malesuada nisi eu tempus. Integer sed aliquam lorem. Suspendisse tempus diam nec risus vulputate tempor. Maecenas mollis orci imperdiet sollicitudin blandit. Mauris in condimentum sapien, et laoreet augue. Nullam justo purus, posuere non laoreet et, imperdiet posuere ante. Proin nec viverra ipsum. In hac habitasse platea dictumst. Nam non diam nec metus fermentum faucibus eget at felis. Vestibulum neque felis, fringilla a ultrices vel, imperdiet in ipsum. Praesent sagittis ipsum felis, et commodo nulla cursus sit amet.</p>
 
               <div class="info-container">
