--- a/views/order.ejs
+++ b/views/order.ejs
@@ -5,9 +5,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Playfair+Display&display=swap" rel="stylesheet">
-<title>Page Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+<title>Order</title>
 <link rel="stylesheet" href="styles/order.css">
 <link rel="stylesheet" href="styles/login.css">
+
+<!-- Navbar -->
+
 </head>
 <body>
 
