--- a/styles/homepage.scss
+++ b/styles/homepage.scss
@@ -13,8 +13,9 @@ main {
 
 #carouselExampleInterval {
   h2{
-    background-color: red;
-    opacity: 10;
+    background-color:rgba(0, 0, 0, 0.5);
+
+    border-radius: 1%;
   }
 }
 .logo{
