--- a/styles/homepage.scss
+++ b/styles/homepage.scss
@@ -43,6 +43,7 @@ main {
   width:200px;
   height:300px;
   object-fit: cover;
+  border: groove burlywood 5px;
 }
 .footer-info {
   display: flex;
