--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,10 +10,10 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active btn btn-primary me-2" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/order">Order Now!</a>
+            <a class="nav-link active btn btn-primary" aria-current="page" href="/order">Order Now!</a>
           </li>
         </ul>
       </div>
@@ -26,7 +26,7 @@
         </form>
       <% } else{ %>
         <div class="form-group mb-2">
-          <a class="btn btn-primary" href="/login">Login</a>
+          <a class="btn btn-primary me-1" href="/login">Login</a>
           <a class="btn btn-primary" href="/register">Register</a>
         </div>
       <% } %>
