--- a/styles/homepage.scss
+++ b/styles/homepage.scss
@@ -30,6 +30,11 @@ main {
   justify-content: space-around;
 }
 
+a{
+  text-decoration: none;
+  color: white;
+}
+
 .info-container {
   display: flex;
   flex-direction: row;
