--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,7 +2,7 @@
   <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light border border-bottom-secondary">
     <div class="container-fluid">
-      <a href="/"> <img src = "images/example_cafe.png" class="img-nav navbar-brand circle  d-none d-md-inline"><img> </a>
+      <a href="/"> <img src = "images/example_cafe.png" class="img-nav navbar-brand circle  d-none d-md-inline ms-3"><img> <h6 class = text-left display-6>Coffee 2 Go </h6></a>
       <a class="navbar-brand d-inline float-left d-md-none text-start text-light" href="#">Example Cafe</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
