Add header footer and login functionality to status and order page

--- a/styles/status.scss
+++ b/styles/status.scss
@@ -1,3 +1,13 @@
-body {
+.order_info {
   margin-left: 5em;
+}
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100vw;
+}
+
+img {
+  width: 10%;
 }
