--- a/views/order.ejs
+++ b/views/order.ejs
@@ -13,10 +13,9 @@
 <link rel="stylesheet" href="styles/login.css">
 
 <!-- Navbar -->
-
+<%- include('partials/_header') %>
 </head>
 <body>
-
     <main>
         <div class="title">
             <h1>Menu</h1>
@@ -52,7 +51,7 @@
               <button type="submit" class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
             </form>
         </section>
-
+        <%- include('partials/_footer') %>
     </main>
 
 
