--- a/styles/status.scss
+++ b/styles/status.scss
@@ -1,5 +1,14 @@
 .order_info {
   margin-left: 5em;
+
+  .confirmed {
+    color: red;
+    font-size: larger;
+  }
+
+  p {
+    font-size: larger;
+  }
 }
 
 footer {
