--- a/styles/order.scss
+++ b/styles/order.scss
@@ -10,6 +10,7 @@ body {
   justify-content: center;
   font-family: 'Cinzel Decorative', cursive;
   margin-bottom: 5rem;
+  margin-top: 5rem;
 }
 .item {
   display: flex;
