--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -21,7 +21,7 @@
         <form method="POST" action="/logout">
           <div class="form-group mb-2 mb-lg-0">
             <label>Logged in: <%= user.email %></label>
-            <button type="submit" style="background-color:transparent; border-color:darkslategray; color:darkslategray" class="btn btn-primary">Logout</button>
+            <button type="submit" class="btn btn-outline-danger">Logout</button>
           </div>
         </form>
       <% } else{ %>
