made styling changes to the home page, and footer partial

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -34,7 +34,7 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem"></i>Example Cafe
+            <i class="fas fa-gem"></i>Coffee 2 Go
           </h6>
           <p>
             Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -51,10 +51,10 @@
           <p><i class="fas fa-home me-3"></i> Toronto, ON</p>
           <p>
             <i class="fas fa-envelope me-3"></i>
-            info@example.com
+            coffee2go@example.com
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+          <p><i class="fas fa-phone me-3"></i> +14377476201</p>
+          <p><i class="fas fa-print me-3"></i> +14377476201</p>
         </div>
         <!-- Grid column -->
       </div>
