--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="styles/homepage.css">
     <link rel="stylesheet" href="styles/login.css">
 
-    <title>Cafe Name</title>
+    <title>Coffee 2 Go</title>
   </head>
   <body>
     <main>
